kubernetes/apps/automation/waha/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: waha
  annotations:
    gethomepage.dev/description: "WhatsApp HTTP API"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Automation"
    gethomepage.dev/icon: "mdi-whatsapp"
    gethomepage.dev/name: "WAHA"
spec:
  hostnames:
    - "waha.${DOMAIN_CLUSTER}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: waha
          port: 3000
